--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "prettier -c . && eslint .",
+    "lint:fix": "prettier -w . && eslint --fix .",
     "preview": "vite preview"
   },
   "dependencies": {
