--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:staging": "vite --mode proxy-staging",
+    "dev:production": "vite --mode proxy-production",
     "build": "tsc -b && vite build",
     "lint": "prettier -c . && eslint .",
     "lint:fix": "prettier -w . && eslint --fix .",
