--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
