--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "rainbow",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "dev:staging": "vite --mode proxy-staging",
-    "dev:production": "vite --mode proxy-production",
-    "build": "tsc -b && vite build",
-    "lint": "prettier -c . && eslint .",
-    "lint:fix": "prettier -w . && eslint --fix .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.62.15",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.7"
-  }
+    "name": "rainbow",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "dev:staging": "vite --mode proxy-staging",
+        "dev:production": "vite --mode proxy-production",
+        "build": "tsc -b && vite build",
+        "lint": "prettier -c . && eslint --cache .",
+        "lint:fix": "prettier -w . && eslint --cache --fix .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@tanstack/react-query": "^5.62.15",
+        "@tanstack/react-router": "^1.95.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "recharts": "^2.15.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@tanstack/router-devtools": "^1.95.0",
+        "@tanstack/router-plugin": "^1.95.0",
+        "@types/node": "^22.10.5",
+        "@types/react": "^19.0.2",
+        "@types/react-dom": "^19.0.2",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.17.0",
+        "eslint-plugin-react": "^7.37.3",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "prettier": "^3.4.2",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.19.0",
+        "vite": "^6.0.7"
+    },
+    "prettier": {
+        "tabWidth": 4
+    }
 }
