WIP: Working chart

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_FLASHLIGHT_URL=https://flashlight.recdep.no
+VITE_FLASHLIGHT_URL=https://flashlight-cr-184945651621.northamerica-northeast2.run.app
