--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "@tanstack/react-router": "^1.95.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "recharts": "^2.15.0"
+        "recharts": "^2.15.0",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
