--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,11 @@
 {
     "compilerOptions": {
+        /* Path aliases */
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        },
+
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
         "target": "ES2020",
         "useDefineForClassFields": true,
