--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build": "tsc -b && vite build",
         "lint": "prettier -c . && eslint --cache .",
         "lint:fix": "prettier -w . && eslint --cache --fix .",
+        "tsc:watch": "tsc -w -p tsconfig.app.json",
         "preview": "vite preview"
     },
     "dependencies": {
