--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_FLASHLIGHT_URL=https://flashlight-cr-184945651621.northamerica-northeast2.run.app
+VITE_MOJANG_URL=https://sessionserver.mojang.com
