--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint": "prettier -c . && eslint --cache .",
         "lint:fix": "prettier -w . && eslint --cache --fix .",
         "tsc:watch": "tsc -w -p tsconfig.app.json",
+        "test": "glob -c \"tsx --test --test-reporter spec \" \"./src/**/*.test.ts\"",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -35,6 +36,7 @@
         "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
+        "glob": "^11.0.1",
         "globals": "^15.14.0",
         "prettier": "^3.4.2",
         "typescript": "~5.7.2",
