chore: Add build to pre-commit
Might be a bit slow, but it is nice to have. Will try it out for a while
and see how I like it.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,8 @@ repos:
             entry: npm run "lint:fix"
             language: system
             pass_filenames: false
+          - id: build
+            name: Build
+            entry: npm run build
+            language: system
+            pass_filenames: false
