--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,7 @@
         /* Path aliases */
         "baseUrl": ".",
         "paths": {
-            "@/*": ["src/*"]
+            "#*": ["src/*"]
         },
 
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
