--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,11 @@ repos:
             entry: npm run "lint:fix"
             language: system
             pass_filenames: false
+          - id: test
+            name: Test
+            entry: npm test
+            language: system
+            pass_filenames: false
           - id: build
             name: Build
             entry: npm run build
