--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "#*": "./src/*"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@fontsource/roboto": "^5.1.1",
+        "@mui/icons-material": "^6.4.0",
+        "@mui/material": "^6.4.0",
         "@tanstack/react-query": "^5.62.15",
         "@tanstack/react-router": "^1.95.0",
         "@tanstack/zod-adapter": "^1.95.3",
