--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "prettier": "^3.4.2",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.19.0",
-        "vite": "^6.0.7"
+        "vite": "^6.0.7",
+        "vite-plugin-react-click-to-component": "^3.1.0"
     },
     "prettier": {
         "tabWidth": 4
