--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@tanstack/react-query": "^5.62.15",
         "@tanstack/react-router": "^1.95.0",
         "@tanstack/zod-adapter": "^1.95.3",
+        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "recharts": "^2.15.0",
