--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,8 +28,8 @@ repos:
             entry: npm test
             language: system
             pass_filenames: false
-          - id: build
-            name: Build
-            entry: npm run build
+          - id: typecheck
+            name: Check types
+            entry: npm run tsc
             language: system
             pass_filenames: false
