--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
         "dev": "vite",
         "dev:staging": "vite --mode proxy-staging",
         "dev:production": "vite --mode proxy-production",
-        "build": "npm run tsc && vite build",
-        "lint": "prettier -c . && eslint --cache .",
-        "lint:fix": "prettier -w . && eslint --cache --fix .",
         "tsc": "tsc -p tsconfig.app.json",
         "tsc:watch": "tsc -w -p tsconfig.app.json",
+        "vite:build": "vite build",
+        "build": "run-p tsc vite:build",
+        "prettier:check": "prettier -c .",
+        "prettier:write": "prettier -w .",
+        "eslint:check": "eslint --cache .",
+        "eslint:write": "eslint --cache --fix .",
+        "lint:check": "run-p eslint:check prettier:check",
+        "lint:fix": "run-p eslint:write prettier:write",
         "test": "node --test --experimental-strip-types --env-file=.env.development",
         "preview": "vite preview"
     },
@@ -48,6 +53,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "glob": "^11.0.1",
         "globals": "^15.15.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^3.5.0",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.24.0",
