--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,8 +17,11 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
-            - name: Build
-              run: npm run build
+            - name: Lint
+              run: npm run lint:check
 
             - name: Test
               run: npm test
+
+            - name: Build
+              run: npm run build
