--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_FLASHLIGHT_URL=http://localhost:5173/flashlight
 VITE_MOJANG_URL=http://localhost:5173/mojang
+VITE_MINECRAFT_SERVICES_API_URL=http://localhost:5173/minecraft-services-api
