--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_FLASHLIGHT_URL=https://flashlight-cr-184945651621.northamerica-northeast2.run.app
 VITE_MOJANG_URL=https://sessionserver.mojang.com
+VITE_MINECRAFT_SERVICES_API_URL=https://api.minecraftservices.com
