--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
         "@fontsource/roboto": "^5.1.1",
         "@mui/icons-material": "^6.4.6",
         "@mui/material": "^6.4.6",
+        "@tanstack/query-sync-storage-persister": "^5.69.0",
         "@tanstack/react-query": "^5.66.11",
+        "@tanstack/react-query-persist-client": "^5.69.0",
         "@tanstack/react-router": "^1.112.0",
         "@tanstack/zod-adapter": "^1.112.0",
         "babel-plugin-react-compiler": "^19.0.0-beta-e1e972c-20250221",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "recharts": "^2.15.1",
+        "superjson": "^2.2.2",
         "zod": "^3.24.2"
     },
     "devDependencies": {
