--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@tanstack/eslint-plugin-query": "^5.68.0",
         "@tanstack/react-query-devtools": "^5.69.0",
         "@tanstack/router-devtools": "^1.112.0",
         "@tanstack/router-plugin": "^1.112.0",
