chore: Enable erasable syntax only

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,7 @@
 
         /* Linting */
         "strict": true,
+        "erasableSyntaxOnly": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
