chore: Enable verbatim module syntax
This enforces `import type` for types, which enables import elision for
node as well.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,6 +24,7 @@
         /* Linting */
         "strict": true,
         "erasableSyntaxOnly": true,
+        "verbatimModuleSyntax": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
