--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,6 +15,7 @@
         /* Linting */
         "strict": true,
         "erasableSyntaxOnly": true,
+        "verbatimModuleSyntax": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
