--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-dom": "^19.1.0",
         "recharts": "^2.15.1",
         "superjson": "^2.2.2",
+        "ua-parser-js": "^2.0.3",
         "zod": "^3.24.2"
     },
     "devDependencies": {
