--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_FLASHLIGHT_URL=https://flashlight-cr-184945651621.northamerica-northeast2.run.app
 VITE_MINETOOLS_API_URL=https://api.minetools.eu
+VITE_SENTRY_DSN=https://b64196670ac9df047b5d3cc244bb8e7d@o4506886740180992.ingest.us.sentry.io/4509317537071104
