--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@mui/icons-material": "^7.0.1",
         "@mui/material": "^7.0.1",
         "@mui/x-date-pickers": "^7.28.2",
+        "@sentry/react": "^9.18.0",
+        "@sentry/vite-plugin": "^3.4.0",
         "@tanstack/query-sync-storage-persister": "^5.71.1",
         "@tanstack/react-query": "^5.71.1",
         "@tanstack/react-query-persist-client": "^5.71.1",
