chore: Upload source maps to sentry on every build
This will result in way more source maps than we need, but until sentry
gives us any issues with that, it seems like an okay solution.

Struggling to get the cloudflare "auto-deploy" to read the auth token
during its build.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,4 +24,7 @@ jobs:
               run: npm test
 
             - name: Build
+              env:
+                  # Upload source maps on every build
+                  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
               run: npm run build
