--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "@tanstack/react-query-persist-client": "^5.71.1",
         "@tanstack/react-router": "^1.114.32",
         "@tanstack/zod-adapter": "^1.114.32",
-        "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+        "babel-plugin-react-compiler": "^19.1.0-rc.3",
         "dayjs": "^1.11.13",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
