--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,6 +1,10 @@
 name: Test and build
 
-on: [push, pull_request, workflow_dispatch]
+on:
+    push:
+        branches:
+            - main
+    pull_request:
 
 jobs:
     test:
