chore: Remove --experimental-strip-types
This is enabled by default since v22.18.0 :^)

https://nodejs.org/en/learn/typescript/run-natively

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "eslint:write": "eslint --cache --fix .",
         "lint:check": "run-p eslint:check prettier:check",
         "lint:fix": "run-p eslint:write prettier:write",
-        "test": "node --test --experimental-strip-types --env-file=.env.development",
+        "test": "node --test --env-file=.env.development",
         "preview": "vite preview"
     },
     "imports": {
