chore: Make prettier output less verbose
On check and fix, only list files that were/would be changed.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "tsc:watch": "tsc -w -p tsconfig.app.json",
         "vite:build": "vite build",
         "build": "run-p tsc vite:build",
-        "prettier:check": "prettier -c .",
-        "prettier:write": "prettier -w .",
+        "prettier:check": "prettier --list-different .",
+        "prettier:write": "prettier --write --list-different .",
         "eslint:check": "eslint --cache .",
         "eslint:write": "eslint --cache --fix .",
         "lint:check": "run-p eslint:check prettier:check",
