--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
       directory: "/"
       schedule:
           interval: "daily"
+      cooldown:
+          default-days: 7
       commit-message:
           prefix: "chore"
           include: "scope"
