--- a/package.json
+++ b/package.json
@@ -31,16 +31,15 @@
         "@mui/x-date-pickers": "^8.15.0",
         "@sentry/react": "^10.22.0",
         "@sentry/vite-plugin": "^4.6.0",
-        "@tanstack/query-async-storage-persister": "^5.90.7",
         "@tanstack/react-query": "^5.90.5",
         "@tanstack/react-query-persist-client": "^5.90.7",
         "@tanstack/react-router": "^1.133.35",
         "babel-plugin-react-compiler": "^19.1.0-rc.3",
         "dayjs": "^1.11.18",
+        "idb-keyval": "^6.2.2",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "recharts": "^3.3.0",
-        "superjson": "^2.2.5",
         "ua-parser-js": "^2.0.6",
         "zod": "^4.1.12"
     },
