chore: Add notes on API usage
I have gotten some feedback that the terms of use for the flashlight API
have not been clear. Though I think that with unclear terms one should
err on the side of caution, it won't hurt to be more explicit about it.

Adding comments next to all references to flashlight stating very
clearly that third-party use is not allowed. This should hopefully make
the terms of the API very clear to someone browsing the code.

This is also required to adhere to the Hypixel API Policy:
https://developer.hypixel.net/policies/

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
+# NOTE: The flashlight API does **not** allow third-party access.
+#       Do not send any requests to any endpoints without explicit permission.
+#       Reach out on Discord for more information. https://discord.gg/k4FGUnEHYg
 VITE_FLASHLIGHT_URL=https://flashlight.prismoverlay.com
 VITE_SENTRY_DSN=https://b64196670ac9df047b5d3cc244bb8e7d@o4506886740180992.ingest.us.sentry.io/4509317537071104
